@@ -224,6 +224,7 @@ func TestEmitEvent(t *testing.T) {
 						},
 					},
 				},
+				"config": []*common.Config{},
 			},
 		},
 		{
@@ -282,7 +283,7 @@ func TestEmitEvent(t *testing.T) {
 
 		select {
 		case event := <-listener.Events():
-			assert.Equal(t, test.Expected, event)
+			assert.Equal(t, test.Expected, event, test.Message)
 		case <-time.After(2 * time.Second):
 			if test.Expected != nil {
 				t.Fatal("Timeout while waiting for event")
